--- a/index.html
+++ b/index.html
@@ -1,54 +1,40 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Petresonko1 - Software Engineer</title>
-  <meta name="description" content="Petresonko1 — Software engineer focused on scalable systems, APIs and delightful developer experiences.">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Petre Isongo - Software Engineer</title>
   <style>
     :root {
       --bg:#0b1020;
       --card:#0f1726;
       --muted:#9aa6bd;
       --accent:#6ee7b7;
-      --accent-2:#60a5fa;
+      --accent2:#60a5fa;
       --glass: rgba(255,255,255,0.03);
-      --glass-2: rgba(255,255,255,0.02);
-      --maxw:1100px;
-      font-synthesis:none;
+      --max-width:1100px;
     }
 
-    * { box-sizing: border-box; }
-    html, body { height: 100%; margin: 0; }
+    * { box-sizing: border-box; margin:0; padding:0; }
     body {
-      color:#e6eef8;
-      font-family:Inter,ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial;
-      background: radial-gradient(800px 400px at 10% 10%, rgba(96,165,250,0.06), transparent 6%),
-                  linear-gradient(180deg,#021027 0%, #071428 60%), var(--bg);
-      -webkit-font-smoothing:antialiased;
-      -moz-osx-font-smoothing:grayscale;
-      line-height:1.5;
+      font-family: Inter, system-ui, sans-serif;
+      background: linear-gradient(180deg, #021027 0%, #071428 100%);
+      color: #e6eef8;
+      line-height: 1.5;
       min-height: 100vh;
-      padding: 0 16px;
+      padding: 20px;
     }
 
-    .wrap {
-      max-width: var(--maxw);
-      width: 100%;
-      margin: 40px auto;
-      border-radius: 14px;
-      background: linear-gradient(180deg, rgba(255,255,255,0.018), rgba(255,255,255,0.01));
-      box-shadow: 0 10px 30px rgba(2,6,23,0.6);
-      padding: 28px;
+    .container {
+      max-width: var(--max-width);
+      margin: 0 auto;
     }
 
     header {
       display: flex;
-      gap: 28px;
-      align-items: flex-start;
-      flex-direction: row;
-      text-align: left;
-      margin-bottom: 24px;
+      gap: 24px;
+      align-items: center;
+      margin-bottom: 32px;
     }
 
     .avatar {
@@ -56,265 +42,252 @@
       height: 120px;
       border-radius: 16px;
       object-fit: cover;
-      object-position: center;
-      border: 2px solid rgba(255,255,255,0.04);
-      background: linear-gradient(135deg, var(--accent), var(--accent-2));
-      padding: 3px;
+      border: 3px solid rgba(255,255,255,0.05);
+      background: linear-gradient(135deg, var(--accent), var(--accent2));
       flex-shrink: 0;
     }
 
     h1 {
-      margin: 0 0 12px 0;
       font-size: 42px;
-      letter-spacing: -0.5px;
-      line-height: 1.2;
       color: #e6eef8;
-      display: block;
     }
 
     h1 small {
       display: block;
-      color: var(--muted);
-      font-weight: 600;
       font-size: 16px;
+      color: var(--muted);
       margin-top: 4px;
     }
 
-    .lead {
+    .intro {
+      margin-top: 12px;
+      max-width: 700px;
       color: var(--muted);
-      margin-top: 8px;
-      max-width: 66ch;
+      font-size: 16px;
     }
 
-    .cta-row {
-      margin-top: 14px;
+    .cta {
+      margin-top: 16px;
       display: flex;
-      gap: 10px;
+      gap: 12px;
       flex-wrap: wrap;
     }
 
     .btn {
-      background: linear-gradient(90deg,var(--accent),var(--accent-2));
-      color:#042433;
-      padding:10px 14px;
-      border-radius:10px;
-      text-decoration:none;
-      font-weight:700;
-      font-size:14px;
-      box-shadow:0 6px 18px rgba(35,80,140,0.08);
+      padding: 10px 16px;
+      border-radius: 10px;
+      font-weight: 700;
+      text-decoration: none;
+      font-size: 14px;
+      color: #042433;
+      background: linear-gradient(90deg, var(--accent), var(--accent2));
+      box-shadow: 0 6px 18px rgba(35,80,140,0.08);
     }
 
     .btn-ghost {
-      background: transparent;
+      padding: 10px 14px;
+      border-radius: 10px;
       border: 1px solid rgba(255,255,255,0.06);
-      color: var(--accent-2);
-      padding: 10px 12px;
-      border-radius:10px;
-      text-decoration: none;
+      color: var(--accent2);
       font-weight: 600;
+      text-decoration: none;
+      font-size: 14px;
     }
 
-    main.grid {
+    main {
       display: grid;
       grid-template-columns: 2fr 1fr;
-      gap: 22px;
-      justify-items: start;
-      align-items: start;
+      gap: 24px;
     }
 
     .card {
       background: var(--card);
-      padding: 18px;
       border-radius: 12px;
+      padding: 20px;
       border: 1px solid rgba(255,255,255,0.02);
-      text-align: left;
+    }
+
+    h2 {
+      margin-bottom: 12px;
     }
 
     .projects {
       display: grid;
-      grid-template-columns: repeat(2,1fr);
+      grid-template-columns: repeat(2, 1fr);
       gap: 12px;
     }
 
     .proj {
-      background: linear-gradient(180deg,rgba(0,0,0,0.02),transparent);
-      border-radius:10px;
-      padding:12px;
-      border:1px solid rgba(255,255,255,0.02);
+      padding: 12px;
+      border-radius: 10px;
+      background: linear-gradient(180deg, rgba(0,0,0,0.02), transparent);
+      border: 1px solid rgba(255,255,255,0.02);
     }
 
-    .proj h3 { margin:0; font-size:15px; }
-    .proj p { margin:8px 0 0 0; color: var(--muted); font-size:13px; }
+    .proj h3 {
+      margin-bottom: 6px;
+      font-size: 15px;
+    }
+
+    .proj p {
+      font-size: 13px;
+      color: var(--muted);
+    }
 
     .skills {
       display: flex;
       flex-wrap: wrap;
       gap: 8px;
-      margin-top: 10px;
+      margin-top: 12px;
     }
 
     .skill {
       padding: 6px 10px;
-      border-radius: 999px;
-      background: linear-gradient(90deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
       font-size: 13px;
       color: var(--muted);
+      border-radius: 999px;
+      background: linear-gradient(90deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
     }
 
-    aside .meta-row {
+    aside {
       display: flex;
-      gap: 10px;
-      flex-wrap: wrap;
-      align-items: center;
+      flex-direction: column;
+      gap: 16px;
+    }
+
+    .meta-row {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
     }
 
     .stat {
       background: var(--glass);
-      padding: 10px;
-      border-radius:10px;
-      min-width: 100px;
+      padding: 12px;
+      border-radius: 10px;
       text-align: center;
+      min-width: 100px;
     }
 
-    .muted { color: var(--muted); font-size:13px; }
+    .muted {
+      color: var(--muted);
+      font-size: 13px;
+    }
 
-    footer { margin-top:20px; color: var(--muted); font-size:13px; text-align:left; }
+    footer {
+      margin-top: 32px;
+      font-size: 13px;
+      color: var(--muted);
+    }
 
     @media(max-width:920px){
-      main.grid { grid-template-columns:1fr; padding-top:10px; }
-      .projects { grid-template-columns:1fr; }
-      .avatar { width: 100px; height: 100px; }
       header { flex-direction: column; align-items: center; text-align: center; }
-      .lead { text-align: center; margin-left: auto; margin-right: auto; }
-      .cta-row { justify-content: center; }
+      main { grid-template-columns: 1fr; }
+      .projects { grid-template-columns: 1fr; }
       footer { text-align: center; }
     }
 
-    a:hover { opacity:0.95; }
-    .copy { cursor:pointer; border:1px dashed rgba(255,255,255,0.03); padding:8px; border-radius:8px; }
-    .badge-ghost { font-size:12px; background: rgba(255,255,255,0.02); padding:6px 8px; border-radius:8px; }
+    a:hover { opacity: 0.95; }
   </style>
 </head>
 <body>
-  <div class="wrap">
+  <div class="container">
     <header>
-      <img class="avatar" src="https://avatars.githubusercontent.com/Petresonko1" alt="avatar">
-      <div style="flex:1">
+      <img class="avatar" src="https://avatars.githubusercontent.com/Petresonko1" alt="Petre Isongo">
+      <div>
         <h1>Petre Isongo
           <small>@Petresonko1 — Software Engineer</small>
         </h1>
-        <p class="lead">
-          I build web and software solutions that span modern websites, mobile applications, and full stack systems with a strong focus on reliability, maintainability, and real world usability. My work blends thoughtful user experience with well structured application logic, ensuring that products are intuitive to use and robust behind the scenes. I enjoy working across the stack, from designing clean interfaces to integrating scalable services and APIs, while paying close attention to performance, observability, and long term sustainability. I value clean code, practical problem solving, and shipping features that create meaningful impact for both users and development teams.
+        <p class="intro">
+          I build modern web solutions, mobile applications, and full stack software with an emphasis on performance, maintainability, and usability. I enjoy crafting intuitive user interfaces while ensuring robust backend logic, scalable APIs, and practical developer tooling. I focus on delivering features that truly matter.
         </p>
-        <div class="cta-row">
-          <a class="btn" href="https://github.com/Petresonko1" target="_blank" rel="noopener">View my GitHub</a>
-          <a class="btn-ghost" href="mailto:peterisongo18@gmail.com">Email me</a>
-          <a class="btn-ghost" href="https://peterisongo16.wixsite.com/peterisongoportfolio" target="_blank" rel="noopener">Portfolio</a>
+        <div class="cta">
+          <a class="btn" href="https://github.com/Petresonko1" target="_blank">GitHub</a>
+          <a class="btn-ghost" href="mailto:peterisongo18@gmail.com">Email</a>
+          <a class="btn-ghost" href="https://peterisongo16.wixsite.com/peterisongoportfolio" target="_blank">Portfolio</a>
         </div>
       </div>
     </header>
 
-    <main class="grid">
+    <main>
       <section>
         <div class="card">
           <h2>Featured Projects</h2>
           <div class="projects">
             <div class="proj">
               <h3>Mobile Apps</h3>
-              <p>Cross-platform mobile applications built with React Native and Flutter, featuring offline capabilities, push notifications, and seamless user experiences.</p>
+              <p>Cross-platform apps with React Native and Flutter featuring offline support, push notifications, and smooth UX.</p>
             </div>
             <div class="proj">
               <h3>E-commerce Systems</h3>
-              <p>Full-stack e-commerce platforms with secure payment gateways, inventory management, and admin dashboards for scalable online stores.</p>
+              <p>Full-stack platforms with secure payments, inventory management, and admin dashboards for scalable online stores.</p>
             </div>
             <div class="proj">
               <h3>Management Systems</h3>
-              <p>Custom business management software including CRM, ERP, and workflow automation tools to streamline operations and improve efficiency.</p>
+              <p>Custom CRM, ERP, and workflow automation tools to streamline operations and improve efficiency.</p>
             </div>
             <div class="proj">
               <h3>Web Applications</h3>
-              <p>Responsive web apps using modern frameworks like React and Vue.js, integrated with APIs for dynamic data handling and real-time features.</p>
+              <p>Responsive apps using React and Vue.js, integrated with APIs for dynamic data handling and real-time features.</p>
             </div>
           </div>
         </div>
 
-        <div class="card" style="margin-top:14px">
-          <h2>About my approach</h2>
-          <p class="muted">Product-driven: I translate product needs into measurable technical plans. I prioritize observability, strong test coverage, and incremental delivery so teams can move quickly and safely.</p>
-
-          <div style="margin-top:12px">
-            <h3>Tech & Tools</h3>
-            <div class="skills">
-              <span class="skill">TypeScript</span>
-              <span class="skill">Node.js</span>
-              <span class="skill">Go</span>
-              <span class="skill">React</span>
-              <span class="skill">Postgres</span>
-              <span class="skill">Docker</span>
-              <span class="skill">Kubernetes</span>
-              <span class="skill">GitHub Actions</span>
-            </div>
+        <div class="card" style="margin-top:16px;">
+          <h2>Tech & Tools</h2>
+          <div class="skills">
+            <span class="skill">TypeScript</span>
+            <span class="skill">Node.js</span>
+            <span class="skill">Go</span>
+            <span class="skill">React</span>
+            <span class="skill">Postgres</span>
+            <span class="skill">Docker</span>
+            <span class="skill">Kubernetes</span>
+            <span class="skill">GitHub Actions</span>
           </div>
         </div>
       </section>
 
       <aside>
         <div class="card">
-          <h3>Contact & quick links</h3>
-          <div class="meta-row" style="margin-bottom:10px">
-            <div style="flex:1">
-              <div class="muted">Email</div>
-              <div style="display:flex;gap:8px;align-items:center;margin-top:6px;">
-                <div class="copy" id="email">peterisongo18@gmail.com</div>
-                <button class="btn-ghost" id="copyBtn">Copy</button>
-              </div>
+          <h2>Contact</h2>
+          <div class="meta-row">
+            <div class="muted">Email:</div>
+            <div><a href="mailto:peterisongo18@gmail.com" class="btn-ghost">peterisongo18@gmail.com</a></div>
+          </div>
+          <div class="meta-row">
+            <div class="muted">Profiles:</div>
+            <div style="display:flex;flex-direction:column;gap:6px;">
+              <a class="badge-ghost" href="https://github.com/Petresonko1" target="_blank">GitHub</a>
+              <a class="badge-ghost" href="https://www.linkedin.com/in/peterisongo" target="_blank">LinkedIn</a>
+              <a class="badge-ghost" href="https://peterisongo16.wixsite.com/peterisongoportfolio" target="_blank">Portfolio</a>
             </div>
           </div>
-
-          <div style="margin-top:10px">
-            <div class="muted">Profiles</div>
-            <div style="margin-top:8px;display:flex;flex-direction:column;gap:8px;">
-              <a class="badge-ghost" href="https://github.com/Petresonko1" target="_blank" rel="noopener">GitHub</a>
-              <a class="badge-ghost" href="https://www.linkedin.com/in/peterisongo" target="_blank" rel="noopener">LinkedIn</a>
-              <a class="badge-ghost" href="https://peterisongo16.wixsite.com/peterisongoportfolio" target="_blank" rel="noopener">Portfolio</a>
+          <div class="meta-row" style="margin-top:12px;">
+            <div class="muted">Availability:</div>
+            <div style="color: var(--accent); font-weight:700;">Open to collaborations & contract work</div>
+          </div>
+          <div class="meta-row" style="margin-top:12px;display:flex;gap:12px;">
+            <div class="stat">
+              <div style="font-weight:700;">8+</div>
+              <div class="muted">Years exp</div>
+            </div>
+            <div class="stat">
+              <div style="font-weight:700;">10+</div>
+              <div class="muted">Projects</div>
             </div>
           </div>
-
-          <div style="margin-top:12px">
-            <div class="muted">Availability</div>
-            <div style="margin-top:8px;color:var(--accent);font-weight:700;">Open to collaborations & contract work</div>
-          </div>
-        </div>
-
-        <div class="card" style="margin-top:14px;">
-          <div style="font-size:13px;color:var(--muted)">Quick stats</div>
-          <div style="display:flex;gap:10px;margin-top:10px">
-            <div class="stat"><div style="font-weight:700">8+</div><div class="muted">Years exp</div></div>
-            <div class="stat"><div style="font-weight:700">10+</div><div class="muted">Projects</div></div>
-          </div>
-          <div style="margin-top:12px;font-size:13px;color:var(--muted)">Want a custom software, mobile app or website? <a href="mailto:peterisongo18@gmail.com" style="color:var(--accent-2)">Email me</a></div>
         </div>
       </aside>
     </main>
 
     <footer>
-      <div style="margin-top:18px">Made with care • © <span id="year"></span> Petre Isongo • <a href="https://github.com/Petresonko1" style="color:var(--muted)">github.com/Petresonko1</a></div>
+      <div>© <span id="year"></span> Petre Isongo • <a href="https://github.com/Petresonko1" style="color: var(--muted);">github.com/Petresonko1</a></div>
     </footer>
   </div>
 
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
-    const copyBtn = document.getElementById('copyBtn');
-    const emailEl = document.getElementById('email');
-    copyBtn.addEventListener('click', async () => {
-      try {
-        await navigator.clipboard.writeText(emailEl.textContent.trim());
-        copyBtn.textContent = 'Copied!';
-        setTimeout(() => copyBtn.textContent = 'Copy', 1500);
-      } catch (e) {
-        alert('Copy failed: ' + e);
-      }
-    });
   </script>
 </body>
 </html>
